			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

13-Aug-2005
~~~~~~~~~~~
Removed GNOME-VFS from --version output; we never use it now (Thomas Leonard).
Failure to create a usable default icon theme can be due to a broken link, so
inform the user and show ~/.icons (Stephen Watson).
Extended attribute support more general, not just types (Stephen Watson).

12-Aug-2005
~~~~~~~~~~~
Updated Polish translation (Wit Wiliński).
Added Portuguese (for Portugal) translation (Renato Caldas).

09-Aug-2005 (Release 2.3)
~~~~~~~~~~~
Opening the menu with the menu key had broken. Also fixed a few minor leaks
(Thomas Leonard).

06-Aug-2005
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Fixed memory leak in new SOAP RPC calls (Thomas Leonard).
Provide alternate to_html.xsl file for different location of Docbook
stylesheets (Stephen Watson).
GTK bug #152151 also causes BadDrawable errors so ignore them as well
(Stephen Watson).

04-Aug-2005
~~~~~~~~~~~
Bugfix: Ultimate++ could crash the filer when its window was iconified
	(Guido Schimmels).

01-Aug-2005
~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

31-Jul-2005
~~~~~~~~~~~
Added a button for configuring video thumbnails (with Stephen Watson's
VideoThumbnail application) to the Options window (Thomas Leonard).
Manual updates.
Right-clicking on a launcher button shows available versions (Thomas Leonard).
Bugfix: Added some missing gdk_event_free() calls (Thomas Leonard).
Bugfix: In vertical ordering mode, the blank space after all the items
	acted as if there were icons there (reported by Arnaud Calvo).
			
30-Jul-2005
~~~~~~~~~~~
Don't abort on BadWindow errors. GTK bug #152151 is still not fixed after
nearly a year, so give up trying to fix it and just ignore it (Thomas Leonard).
Don't show Help menu item for applications with no Help subdirectory (Thomas
Leonard).

29-Jul-2005
~~~~~~~~~~~
Added option to only show iconified windows belonging to the current workspace
(Tom Morton).