@@ -1,0 +1,13 @@
+<?xml version='1.0'?>
+<interface xmlns='http://zero-install.sourceforge.net/2004/injector/interface'
+	   uri='http://rox.sourceforge.net/2005/interfaces/ROX-Filer'
+	   main='ROX-Filer/AppRun'>
+  <name>ROX-Filer</name>
+  <summary>fast and powerful file manager</summary>
+  <description>
+    ROX-Filer is a fast and powerful graphical file manager. It has full drag-and-drop support and background file operations, and is highly configurable. It can also act as a pinboard, allowing you to pin frequently used files to the desktop background.
+  </description>
+  <group>
+    <implementation version="2.3.0" stability='developer' id="."/>
+  </group>
+</interface>
