@@ -246,8 +246,8 @@ static GtkItemFactoryEntry filer_menu_def[] = {
 {">",				NULL, NULL, 0, "<Separator>"},
 {">" N_("Enter Path..."),	"slash", mini_buffer, MINI_PATH, NULL},
 {">" N_("Shell Command..."),	"<Shift>exclam", mini_buffer, MINI_SHELL, NULL},
-{">" N_("Xterm Here"),		"grave", xterm_here, FALSE, NULL},
-{">" N_("Switch to xterm"),	NULL, xterm_here, TRUE, NULL},
+{">" N_("Terminal Here"),	"grave", xterm_here, FALSE, NULL},
+{">" N_("Switch to Terminal"),	NULL, xterm_here, TRUE, NULL},
 {N_("Help"),			NULL, NULL, 0, "<Branch>"},
 {">" N_("About ROX-Filer..."),	NULL, menu_rox_help, HELP_ABOUT, NULL},
 {">" N_("Show Help Files"),	"F1", menu_rox_help, HELP_DIR, "<StockItem>", GTK_STOCK_HELP},
