@@ -2,6 +2,13 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+14-Aug-2005
+~~~~~~~~~~~
+Added ROX-Filer.xml file, giving details of the current version. This can be
+used to register a CVS version of the filer with the injector easily (Thomas
+Leonard).
+Renamed 'Xterm Here' to 'Terminal Here' (suggested by seventh guardian).
+
 13-Aug-2005
 ~~~~~~~~~~~
 Removed GNOME-VFS from --version output; we never use it now (Thomas Leonard).
